# imav2019

./: README.md  camera_params.sh
flag_detector/: CMakeLists.txt  flag_detect_cany_merge.py  package.xml
flag_detector/cvTemplates/: main.py
flag_detector/msg/: Flag.msg
gles_undistort/: CMakeLists.txt  nodelets.xml  package.xml
gles_undistort/launch/: camera.launch  example.launch
gles_undistort/src/: gles_undistort.cpp  undistort_node.cpp
gles_undistort/src/gfx/: Context.cpp  Context.h  Mesh.cpp  Mesh.h  Shader.h  ShaderSources.h  Texture.cpp  Texture.h  UndistortedMesh.cpp
imav/: CMakeLists.txt  package.xml
imav/camera_info/: fisheye_cam_640_360.yaml  jetson_camera.yaml
imav/launch/: front_camera.launch  main_camera.launch  qr.launch  t265.launch
imav/src/: flight.py  flight_final.py  packages.csv  packages_demo.csv  start_gcs.sh
paper/: paper.tex
text_detector/: CMakeLists.txt  nodelets.xml  package.xml
text_detector/launch/: test.launch  text_detector.launch
text_detector/msg/: DetectedText.msg
text_detector/src/: text_detector_node.cpp  text_detector_nodelet.cpp
zbar_ros_redux/: CMakeLists.txt  nodelets.xml  package.xml
zbar_ros_redux/include/zbar_ros/: barcode_reader_nodelet.h
zbar_ros_redux/include/zbar_ros_redux/: barcode_reader_nodelet.h
zbar_ros_redux/launch/: example.launch
zbar_ros_redux/msg/: DetectedQr.msg
zbar_ros_redux/src/: barcode_reader_node.cpp  barcode_reader_nodelet.cpp
