<?xml version="1.0"?>
<package format="2">
  <name>zbar_ros_redux</name>
  <version>0.1.0</version>
  <description>Lightweight ROS wrapper for Zbar barcode/qrcode reader library (http://zbar.sourceforge.net/)</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="sfalexrog@gmail.com">Alexey Rogachevskiy</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>zbar</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <build_depend>roslint</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
